fix(Sticky): Z-Index of positioned content inside a sticky element

--- a/src/materials/layout.css
+++ b/src/materials/layout.css
@@ -5,8 +5,8 @@
   --layout-width-large: 75rem;
 
   --z-index-platform: 1;
-  --z-index-position: 2;
-  --z-index-modal: 2;
   --z-index-sticky: 2;
-  --z-index-notifications: 3;
+  --z-index-position: 3;
+  --z-index-modal: 3;
+  --z-index-notifications: 4;
 }
